[gd_scene load_steps=4 format=3 uid="uid://ccgl2n0s5iw4u"]

[ext_resource type="Script" path="res://scenes/factory_building/factory_building.gd" id="1_gdtqv"]

[sub_resource type="SystemFont" id="SystemFont_acgdp"]
subpixel_positioning = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6emo"]
size = Vector2(100, 100)

[node name="FactoryBuilding" type="Area2D" groups=["factory_buildings"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_gdtqv")

[node name="BuildingSprite" type="ColorRect" parent="."]
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2

[node name="BuildingLabel" type="Label" parent="BuildingSprite"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -11.5
offset_right = 35.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_acgdp")
theme_override_font_sizes/font_size = 12
text = "FACTORY
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_g6emo")
